ensure proper size of mode selection 'dialog' on first show

fixes position issues on Wayland, too

avoid to use showEvent, move logic to aboutToShow handler

BUG: 497192